samples/_failures_safe/1761474789_911a3c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6535c547.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_6535c547.c:162:27: error: missing terminating " character
  162 |         case DONE: return "D
      |                           ^~
./samples/SAFE/__tmp_6535c547.c:162:9: error: expected expression at end of input
  162 |         case DONE: return "D
      |         ^~~~
./samples/SAFE/__tmp_6535c547.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6535c547.c:162:9: error: expected declaration or statement at end of input
